syntax = "proto3";

import "Protos/get_by_domain_request.proto";

option csharp_namespace = "BrassLoon.Interface.Authorization.Protos";

service TokenService {
	rpc Create(GetByDomainRequest) returns (TokenResponse);
    rpc CreateClientCredential(ClientCredential) returns (TokenResponse);
}

message TokenResponse {
    string Value = 1;
}

message ClientCredential {
    string ClientId = 1;
    string DomainId = 2;
    string Secret = 3;
}